# c-network-simulation

./: .gitignore  README.md  TODO.md  contenu_fichiers.txt
code/: .clang-format  CMakeLists.txt  Makefile  format-code.sh
code/configurations/: lan1.lan  lan1cycle.lan  lan_hasard.lan
code/src/: config.c  ip.c  mac.c  main.c  reseau.c  station.c  switch.c  table_commutation.c  trame.c
code/src/include/: config.h  ip.h  king_kong.h  mac.h  reseau.h  sae-s21.code-workspace  station.h  switch.h  table_commutation.h  trame.h
